add protein structures viewer

--- a/lib/widget/widgets/demos/templates/index.html
+++ b/lib/widget/widgets/demos/templates/index.html
@@ -20,7 +20,12 @@
 
                 {% elif demo == "media-viewer-py" %}
 
-                 {% include "partials/media-viewer-py.html" %}
+                    {% include "partials/media-viewer-py.html" %}
+
+                {% elif demo == "protein-structures-viewer" %}
+
+                    {% include "partials/protein-structures-viewer.html" %}
+
 
                 {% endif %}
 
