--- a/lib/widget/widgets/demos/templates/partials/menu.html
+++ b/lib/widget/widgets/demos/templates/partials/menu.html
@@ -13,3 +13,8 @@
         Media Viewer - Python
     </a>
 </div>
+<div class="demo-page-nav-item"> 
+    <a class="btn btn-secondary"  href="{{ widget_config.base_path }}/widgets/demos?demo=protein-structures-viewer">
+        Protein Structures Viewer - Python
+    </a>
+</div>
