set height on containers

--- a/lib/widget/widgets/demos/templates/partials/media-viewer-py.html
+++ b/lib/widget/widgets/demos/templates/partials/media-viewer-py.html
@@ -44,7 +44,7 @@
         </div>
 
         <div id="media-viewer-py-container" style="resize: vertical; overflow-y: auto;
-border: 1px solid silver; padding: 1rem"></div>
+border: 1px solid silver; padding: 1rem; height: 30rem"></div>
 
     </div>
 </div>
