--- a/lib/widget/widgets/demos/templates/partials/media-viewer-js.html
+++ b/lib/widget/widgets/demos/templates/partials/media-viewer-js.html
@@ -69,4 +69,4 @@ document.querySelector('#media-viewer-js-form button[name="kill"]').addEventList
     container.innerHTML = '';
 });
 </script>
-<div id="media-viewer-js-container" style="resize: vertical; overflow-y: auto; border: 1px solid silver; padding: 1rem"></div>
+<div id="media-viewer-js-container" style="resize: vertical; overflow-y: auto; border: 1px solid silver; padding: 1rem; height: 30rem;"></div>
