add demo genome viewer

--- a/lib/widget/widgets/demos/templates/index.html
+++ b/lib/widget/widgets/demos/templates/index.html
@@ -26,6 +26,9 @@
 
                     {% include "partials/protein-structures-viewer.html" %}
 
+                {% elif demo == "demo-genome-viewer" %}
+
+                    {% include "partials/demo-genome-viewer.html" %}
 
                 {% endif %}
 
