--- a/lib/widget/widgets/demos/templates/partials/menu.html
+++ b/lib/widget/widgets/demos/templates/partials/menu.html
@@ -18,3 +18,8 @@
         Protein Structures Viewer - Python
     </a>
 </div>
+<div class="demo-page-nav-item"> 
+    <a class="btn btn-secondary"  href="{{ widget_config.base_path }}/widgets/demos?demo=demo-genome-viewer">
+        Demo Genome Viewer - Python
+    </a>
+</div>
