--- a/lib/widget/widgets/config/templates/index.html
+++ b/lib/widget/widgets/config/templates/index.html
@@ -5,7 +5,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
     <!-- we always root in /widgets -->
-    <link href="/widgets/assets/config/style.css" rel="stylesheet">
+    <link href="{{ widget_asset_url }}/style.css" rel="stylesheet">
 </head>
 <body>
     <h1>Config</h1>
@@ -18,7 +18,7 @@
             </tr>
         </thead>
         <tbody>
-            {% for key, value in config.items() %}
+            {% for key, value in service_config.items() %}
                 <tr>
                     <td>
                         {{ key }}
