--- a/lib/widget/widgets/demos/templates/partials/media-viewer-js.html
+++ b/lib/widget/widgets/demos/templates/partials/media-viewer-js.html
@@ -1,12 +1,18 @@
-
-<div class="card mt-2">
-    <div class="card-header">
-        Media Viewer - all Javascript
-    </div>
-    <div class="card-body">
-        <p>In this demo, we provide a landing page for the Media data type, written in
-        Javascript, utilizing jQuery, Bootstrap, DataTables, and KBase
-        libraries.</p>
+<ul class="nav nav-tabs" role="tablist" id="demo-page-tabs">
+    <li class="nav-item" role="presentation">
+        <button class="nav-link active" id="demo-tab" data-bs-toggle="tab" data-bs-target="#demo" type="button" role="tab" aria-controls="demo" aria-selected="false">
+            Media Viewer - Javascript
+        </button>
+    </li>
+    <li class="nav-item" role="presentation">
+        <button class="nav-link" id="about-tab" data-bs-toggle="tab" data-bs-target="#about" type="button" role="tab" aria-controls="about" aria-selected="true">
+            About
+        </button>
+    </li>
+</ul>
+<div class="tab-content" id="demo-page-tab-content">
+    <div class="tab-pane fade show active pt-3 dataTablesOverride-ScrollingFlexFix"
+    id="demo" role="tabpanel" aria-labelledby="demo-tab">
         <div class="container container-fluid" id="media-viewer-js-form">
             <div class="row mb-3">
                 <div class="col-sm-2 col-form-label">
@@ -35,38 +41,48 @@
                 </div>
             </div>
         </div>
+
+        <div id="media-viewer-js-container" style="resize: vertical; overflow-y: auto; border: 1px solid silver; padding: 1rem; height: 30rem;"></div>
+            
+        <script>
+            document.querySelector('#media-viewer-js-form button[name="render"]').addEventListener("click", (e) => {
+                const ref = document.querySelector('#media-viewer-js-form input[name="object-ref"]').value;
+                if (ref.length === 0) {
+                    alert('Please enter a ref');
+                    return;
+                }
+            
+                const token = (() => {
+                    const token_field = document.querySelector('#media-viewer-py-form input[name="auth-token"]')
+                    if (token_field) {
+                        return token_field.value;
+                    }
+                    return null;
+                })();
+            
+                if (token) {
+                    document.cookie = `kbase_session=${token};path=/`
+                }   
+            
+                const src = `{{ widget_config.base_path }}/widgets/media_viewer?token=${token}&ref=${ref}`;
+            
+                const container = document.querySelector('#media-viewer-js-container')
+            
+                container.innerHTML = `<iframe src="${src}" style="width: 100%; height: 100%; border: none;" />`;
+            });
+            
+            document.querySelector('#media-viewer-js-form button[name="kill"]').addEventListener("click", (e) => {
+                const container = document.querySelector('#media-viewer-js-container');
+                container.innerHTML = '';
+            });
+        </script>
+            
+    </div>
+
+    <div class="tab-pane fade pt-3 dataTablesOverride-ScrollingFlexFix" id="about"
+    role="tabpanel" aria-labelledby="about-tab">
+        <p>In this demo, we provide a landing page for the Media data type, written in
+        Javascript, utilizing jQuery, Bootstrap, DataTables, and KBase
+        libraries.</p>
     </div>
 </div>
-<script>
-document.querySelector('#media-viewer-js-form button[name="render"]').addEventListener("click", (e) => {
-    const ref = document.querySelector('#media-viewer-js-form input[name="object-ref"]').value;
-    if (ref.length === 0) {
-        alert('Please enter a ref');
-        return;
-    }
-
-    const token = (() => {
-        const token_field = document.querySelector('#media-viewer-py-form input[name="auth-token"]')
-        if (token_field) {
-            return token_field.value;
-        }
-        return null;
-    })();
-
-    if (token) {
-        document.cookie = `kbase_session=${token};path=/`
-    }   
-
-    const src = `{{ widget_config.base_path }}/widgets/media_viewer?token=${token}&ref=${ref}`;
-
-    const container = document.querySelector('#media-viewer-js-container')
-
-    container.innerHTML = `<iframe src="${src}" style="width: 100%; height: 100%; border: none;" />`;
-});
-
-document.querySelector('#media-viewer-js-form button[name="kill"]').addEventListener("click", (e) => {
-    const container = document.querySelector('#media-viewer-js-container');
-    container.innerHTML = '';
-});
-</script>
-<div id="media-viewer-js-container" style="resize: vertical; overflow-y: auto; border: 1px solid silver; padding: 1rem; height: 30rem;"></div>
