--- a/lib/widget/widgets/demos/templates/partials/media-viewer-py.html
+++ b/lib/widget/widgets/demos/templates/partials/media-viewer-py.html
@@ -1,19 +1,20 @@
-
-<div class="card mt-2">
-    <div class="card-header">
-        Media Viewer - all Javascript
-    </div>
-    <div class="card-body">
-        <h1>Media Viewer - Python with Javascript</h1>
-
-        <p>In this demo, we provide a landing page for the Media data type, written
-            primarily in Python, utilizing Jinja2, with interactivity via Javascript, utilizing
-            jQuery, Bootstrap, DataTables (not yet?), and KBase libraries.</p>
-
-        <p>Note that as this is built on the KBase kbase/sdkbase2:python image, we are
-            stuck, for now, with whatever the limitations are of the image. E.g. Python is 3.6,
-            pretty old.</p>
-
+<ul class="nav nav-tabs" role="tablist" id="demo-page-tabs">
+    <li class="nav-item" role="presentation">
+        <button class="nav-link active" id="demo-tab" data-bs-toggle="tab" data-bs-target="#demo" type="button"
+            role="tab" aria-controls="demo" aria-selected="false">
+            Media Viewer - Python with Javascript
+        </button>
+    </li>
+    <li class="nav-item" role="presentation">
+        <button class="nav-link" id="about-tab" data-bs-toggle="tab" data-bs-target="#about" type="button" role="tab"
+            aria-controls="about" aria-selected="true">
+            About
+        </button>
+    </li>
+</ul>
+<div class="tab-content" id="demo-page-tab-content">
+    <div class="tab-pane fade show active pt-3 dataTablesOverride-ScrollingFlexFix" id="demo" role="tabpanel"
+        aria-labelledby="demo-tab">
         <div class="container container-fluid" id="media-viewer-py-form">
             <div class="row mb-3">
                 <div class="col-sm-2 col-form-label">
@@ -46,37 +47,56 @@
         <div id="media-viewer-py-container" style="resize: vertical; overflow-y: auto;
 border: 1px solid silver; padding: 1rem; height: 30rem"></div>
 
+        <script>
+            document.querySelector('#media-viewer-py-form button[name="render"]').addEventListener("click", (e) => {
+                const ref = document.querySelector('#media-viewer-py-form input[name="object-ref"]').value;
+                const token = (() => {
+                    const token_field = document.querySelector('#media-viewer-py-form input[name="auth-token"]');
+                    if (token_field) {
+                        return token_field.value;
+                    }
+                    return null;
+                })();
+
+                if (ref.length === 0) {
+                    alert('Please enter a ref');
+                    return;
+                }
+
+                if (token) {
+                    document.cookie = `kbase_session=${token};path=/`;
+                }
+
+                const params = JSON.stringify({ ref });
+
+
+                const url = new URL(window.location.origin);
+
+                url.pathname = `{{ widget_config.base_path }}/widgets/media_viewer_py`;
+                url.searchParams.set('params', params);
+
+                // const src = `{{ widget_config.base_path }}/widgets/media_viewer_py?ref=${ref}`;
+
+                const container = document.querySelector('#media-viewer-py-container');
+
+                container.innerHTML = `<iframe src="${url.toString()}" style="width: 100%; height: 100%;  border: none;" />`;
+            });
+
+            document.querySelector('#media-viewer-py-form button[name="kill"]').addEventListener("click", (e) => {
+                const container = document.querySelector('#media-viewer-py-container');
+                container.innerHTML = '';
+            });
+        </script>
+    </div>
+
+    <div class="tab-pane fade pt-3 dataTablesOverride-ScrollingFlexFix" id="about" role="tabpanel"
+        aria-labelledby="about-tab">
+        <p>In this demo, we provide a landing page for the Media data type, written
+            primarily in Python, utilizing Jinja2, with interactivity via Javascript, utilizing
+            jQuery, Bootstrap, DataTables (not yet?), and KBase libraries.</p>
+
+        <p>Note that as this is built on the KBase kbase/sdkbase2:python image, we are
+            stuck, for now, with whatever the limitations are of the image. E.g. Python is 3.6,
+            pretty old.</p>
     </div>
 </div>
-<script>
-    document.querySelector('#media-viewer-py-form button[name="render"]').addEventListener("click", (e) => {
-        const ref = document.querySelector('#media-viewer-py-form input[name="object-ref"]').value;
-        const token = (() => {
-            const token_field = document.querySelector('#media-viewer-py-form input[name="auth-token"]')
-            if (token_field) {
-                return token_field.value;
-            }
-            return null;
-        })();
-   
-        if (ref.length === 0) {
-            alert('Please enter a ref');
-            return;
-        }
-
-        if (token) {
-            document.cookie = `kbase_session=${token};path=/`
-        }   
-
-        const src = `{{ widget_config.base_path }}/widgets/media_viewer_py?token=${token}&ref=${ref}`;
-
-        const container = document.querySelector('#media-viewer-py-container');
-
-        container.innerHTML = `<iframe src="${src}" style="width: 100%; height: 100%;  border: none;" />`;
-    });
-
-    document.querySelector('#media-viewer-py-form button[name="kill"]').addEventListener("click", (e) => {
-        const container = document.querySelector('#media-viewer-py-container');
-        container.innerHTML = '';
-    });
-</script>
