--- a/lib/widget/widgets/media_viewer/templates/index.html
+++ b/lib/widget/widgets/media_viewer/templates/index.html
@@ -7,7 +7,7 @@
         <link href="https://cdn.datatables.net/v/bs5/dt-1.13.6/sc-2.2.0/datatables.min.css" rel="stylesheet">
         <script src="https://cdn.datatables.net/v/bs5/dt-1.13.6/sc-2.2.0/datatables.min.js"></script>
         <!-- <link href="{{ base_path }}/widgets/assets/style.css" rel="stylesheet"> -->
-        <script src="{{ asset_url }}/js/lib.js"></script>
+        <link href="{{ asset_url }}/css/style.css" rel="stylesheet">
         <link href="{{ widget_asset_url }}/style.css" rel="stylesheet">
     </head>
     <body>
@@ -177,54 +177,52 @@
                 </div>
             </div>
         </div>
-        <script>
-            // decouple from WidgetRuntime for now ... need to fold the widget runtime
-            // support into the iframe wrapper in the demo / devtool
-            // class MediaViewerRuntime extends fWidgetRuntime {
-            class MediaViewerRuntime {
-                constructor() {
-                    // super();
+        <script type="module">
+            import {WidgetRuntime} from '{{ asset_url }}/js/lib.js';
+            window.addEventListener('load', () => {
+                class MediaViewerRuntime extends WidgetRuntime {
+                    constructor() {
+                        super();
 
-                    // Initialize data table for the compounds table
-                    this.compoundsTable = new DataTable('#compounds-table', {
-                        paging: false,
-                        scrollCollapse: true,
-                        scrollY: 'auto',
-                        dom: '<"dataTablesOverride-top"if>t'
-                    });
+                        // Initialize data table for the compounds table
+                        this.compoundsTable = new DataTable('#compounds-table', {
+                            paging: false,
+                            scrollCollapse: true,
+                            scrollY: 'auto',
+                            dom: '<"dataTablesOverride-top"if>t'
+                        });
 
-                    // A little hack to get the header to size correctly, as it is initially
-                    // sized within the hidden second tab.
-                    $('button[data-bs-toggle="tab"]').on('shown.bs.tab', (ev) => {
-                        if (this.widgetStateUpdated) {
-                            this.widgetStateUpdated({
-                                tab: ev.target.id
-                            });
-                        }
-                        const id = ev.target.id;
-                        if (id !== 'compounds-tab') {
-                            return;
-                        }
-                        this.compoundsTable.columns.adjust();
-                    });
-                }
-
-                start({authentication, config, params, state}) {
-                    // console.log('IN START!', state);
-                    // Select the tab, if set
-                    if ('tab' in state) {
-                        const tabId = state.tab;
-                        const $tab = $(`button[data-bs-toggle="tab"][id="${tabId}"]`);
-                        const tab = new bootstrap.Tab($tab);
-                        console.log('setting tab', tabId, $tab, tab)
-                        tab.show();
+                        // A little hack to get the header to size correctly, as it is initially
+                        // sized within the hidden second tab.
+                        $('button[data-bs-toggle="tab"]').on('shown.bs.tab', (ev) => {
+                            if (this.widgetStateUpdated) {
+                                this.widgetStateUpdated({
+                                    tab: ev.target.id
+                                });
+                            }
+                            const id = ev.target.id;
+                            if (id !== 'compounds-tab') {
+                                return;
+                            }
+                            this.compoundsTable.columns.adjust();
+                        });
                     }
 
-                    this.channel.send('set-title', {title: "{{ media_object.data.name }}"})
-                }
-            }
+                    start({authentication, config, params, state}) {
+                        // Select the tab, if set
+                        if ('tab' in state) {
+                            const tabId = state.tab;
+                            const $tab = $(`button[data-bs-toggle="tab"][id="${tabId}"]`);
+                            const tab = new bootstrap.Tab($tab);
+                            tab.show();
+                        }
 
-            const runtime = new MediaViewerRuntime();
+                        this.sendChannel.send('set-title', {title: "{{ media_object.data.name }}"})
+                    }
+                }
+
+                const runtime = new MediaViewerRuntime();
+            })
         </script>
     </body>
 </html>
