--- a/widget/assets/css/style.css
+++ b/widget/assets/css/style.css
@@ -62,7 +62,8 @@ dom: '<"dataTablesOverride-top"if>t'
     flex-direction: column;
 }
 
-.dataTablesOverride-ScrollingFlexFix th {
+.dataTablesOverride-ScrollingFlexFix th,
+.dataTablesOverride-ScrollingFlexFix td {
     vertical-align: middle;
 }
 
