--- a/lib/widget/widgets/media_viewer/templates/index.html
+++ b/lib/widget/widgets/media_viewer/templates/index.html
@@ -1,6 +1,8 @@
+<!DOCTYPE html >
 <html lang="en-US">
     <head>
-        <title>Jinja2 Demo</title>
+        <meta charset="UTF-8">
+        <title>Media Viewer Demo</title>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/jquery@3.7.0/dist/jquery.min.js" integrity="sha256-2Pmvv0kuTBOenSvLm6bvfBSSHrUJ+3A7x6P5Ebd07/g=" crossorigin="anonymous"></script>
@@ -30,7 +32,20 @@
             </li>
         </ul>
         <div class="tab-content" id="media-tab-content">
-            <div class="tab-pane fade show active pt-3 dataTablesOverride-ScrollingFlexFix" id="compounds" role="tabpanel" aria-labelledby="compounds-tab">
+            <div class="tab-pane fade show active pt-3
+            dataTablesOverride-ScrollingFlexFix" id="compounds" role="tabpanel"
+            aria-labelledby="compounds-tab">
+                ({{ asset_url }})
+                <script>
+                    async function test() {
+                    const url = "{{ asset_url }}/css/style.css";
+                    const response = await fetch(url);
+                    const text = await response.text();
+                    console.log(`using url: x${url}x`);
+                    console.log('GOT?', text);
+                    }
+                    test();
+                </script>
                 <table class="display table"  style="width: 100%" id="compounds-table">
                     <thead>
                         <tr>
@@ -178,6 +193,7 @@
             </div>
         </div>
         <script type="module">
+            // import {WidgetRuntime} from '{{ asset_url }}/js/lib.js';
             import {WidgetRuntime} from '{{ asset_url }}/js/lib.js';
             window.addEventListener('load', () => {
                 class MediaViewerRuntime extends WidgetRuntime {
